--- a/Feedback/NHS111.Business.Feedback.Api.Functional.Tests/App.config
+++ b/Feedback/NHS111.Business.Feedback.Api.Functional.Tests/App.config
@@ -1,8 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <!--<appSettings file="..\..\..\nhs111-shared-resources\shared.debug.config">-->
   <appSettings file="..\..\..\nhs111-shared-resources\shared.debug.config">
-    <add key="FeedbackUrl" value="http://nhs111businessfeedbackapi.azurewebsites.net/"/>
-    <add key="FeedbackAuthorization" value="Basic Temp"/>
+    <add key="FeedbackUrl" value="http://nhs111businessfeedbackapi.azurewebsites.net/" />
+    <add key="FeedbackAuthorization" value="Basic Temp" />
   </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
