--- a/Feedback/NHS111.Business.Feedback.Api/NHS111.Business.Feedback.Api.csproj
+++ b/Feedback/NHS111.Business.Feedback.Api/NHS111.Business.Feedback.Api.csproj
@@ -172,14 +172,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="bin\x64\SQLite.Interop.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bin\x86\SQLite.Interop.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Global.asax" />
     <Content Include="IoC\readme.txt" />
+    <Content Include="SQLLite\x64\SQLite.Interop.dll" />
+    <Content Include="SQLLite\x86\SQLite.Interop.dll" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
