:name_badge: expose identifier from database

--- a/Feedback/NHS111.Business.Feedback.Api/Web.config
+++ b/Feedback/NHS111.Business.Feedback.Api/Web.config
@@ -23,7 +23,7 @@
     <globalization culture="en-GB" />
     <customErrors mode="Off" />
   </system.web>
-  <appSettings file="..\..\..\nhs111-shared-resources\shared.debug.config">
+  <appSettings file="C:\Configurations\nhs111-shared-resources\shared.debug.config">
     <add key="SqliteDbConnectionString" value="data source=L:\Work\111 Online\nhs111-feedback\Feedback\NHS111.Domain.Feedback\FeedbackDb; Version=3; Pooling=True; Max Pool Size=100;" />
     <add key="login_credential_user" value="madeupUser" />
     <add key="login_credential_password" value="madeupPassword" />
