--- a/Feedback/NHS111.Domain.Feedback/NHS111.Domain.Feedback.csproj
+++ b/Feedback/NHS111.Domain.Feedback/NHS111.Domain.Feedback.csproj
@@ -118,6 +118,7 @@
   <ItemGroup>
     <Compile Include="Convertors\FeedbackConverter.cs" />
     <Compile Include="IoC\FeedbackDomainRegistry.cs" />
+    <Compile Include="Models\DatabaseCode.cs" />
     <Compile Include="Models\Feedback.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\FeedbackRepository.cs" />
