--- a/Feedback/NHS111.Business.Feedback.Api/Web.config
+++ b/Feedback/NHS111.Business.Feedback.Api/Web.config
@@ -27,6 +27,7 @@
     <add key="SqliteDbConnectionString" value="data source=L:\Work\111 Online\nhs111-feedback\Feedback\NHS111.Domain.Feedback\FeedbackDb; Version=3; Pooling=True; Max Pool Size=100;" />
     <add key="login_credential_user" value="madeupUser" />
     <add key="login_credential_password" value="madeupPassword" />
+    <add key ="DeleteFeedbackFeature" value="false" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
