--- a/Feedback/NHS111.Domain.Feedback/NHS111.Domain.Feedback.csproj
+++ b/Feedback/NHS111.Domain.Feedback/NHS111.Domain.Feedback.csproj
@@ -59,8 +59,9 @@
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="NHS111.Utils">
-      <HintPath>..\packages\NHS111.Utils.1.0.0.21\lib\net451\NHS111.Utils.dll</HintPath>
+    <Reference Include="NHS111.Utils, Version=1.0.0.24, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\NHS111.Utils.1.0.0.24\lib\net451\NHS111.Utils.dll</HintPath>
     </Reference>
     <Reference Include="StackExchange.Redis, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\StackExchange.Redis.1.1.603\lib\net45\StackExchange.Redis.dll</HintPath>
