--- a/Feedback/NHS111.Business.Feedback.Api/ApplicationInsights.config
+++ b/Feedback/NHS111.Business.Feedback.Api/ApplicationInsights.config
@@ -77,5 +77,5 @@
     
     Note: If not present, please add <InstrumentationKey>Your Key</InstrumentationKey> to the top of this file.
   -->
-  <InstrumentationKey>beced531-b305-4496-bbb0-0c5b9c295112</InstrumentationKey>
+  <InstrumentationKey>#{InstrumentationKey}</InstrumentationKey>
 </ApplicationInsights>
