--- a/Feedback/NHS111.Business.Feedback.Api/Web.config
+++ b/Feedback/NHS111.Business.Feedback.Api/Web.config
@@ -32,6 +32,7 @@
     <add key="login_credential_user" value="madeupUser" />
     <add key="login_credential_password" value="madeupPassword" />
     <add key="DeleteFeedbackFeature" value="false" />
+    <add key="StorageConnectionString" value="DefaultEndpointsProtocol=https;AccountName=account-name;AccountKey=account-key" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
