--- a/Feedback/NHS111.Business.Feedback.Api/Web.config
+++ b/Feedback/NHS111.Business.Feedback.Api/Web.config
@@ -33,6 +33,7 @@
     <add key="login_credential_password" value="madeupPassword" />
     <add key="DeleteFeedbackFeature" value="false" />
     <add key="StorageConnectionString" value="DefaultEndpointsProtocol=https;AccountName=account-name;AccountKey=account-key" />
+    <add key="StorageTableReference" value="table-name" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
