updated tests to remove sql lite refs

--- a/Feedback/NHS111.Business.Feedback.Api.Functional.Tests/App.config
+++ b/Feedback/NHS111.Business.Feedback.Api.Functional.Tests/App.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings file="C:\Configurations\nhs111-shared-resources\shared.debug.config">
-    <add key="FeedbackUrl" value="http://localhost/feedback" />
+    <add key="FeedbackUrl" value="http://localhost:50139/" />
     <add key="FeedbackAuthorization" value="Basic Temp" />
+    <add key="madeUpUser" value="digital111_ws"/>
+    <add key="madeUpPassword" value="Valtech111"/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
