--- a/Feedback/NHS111.Business.Feedback.Api/packages.config
+++ b/Feedback/NHS111.Business.Feedback.Api/packages.config
@@ -19,8 +19,12 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
+  <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net451" />
+  <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="net451" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.2" targetFramework="net451" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Neo4jClient" version="1.1.0.39" targetFramework="net451" />
@@ -33,9 +37,15 @@
   <package id="StructureMap.MVC5" version="3.1.1.134" targetFramework="net451" />
   <package id="structuremap.web" version="4.0.0.315" targetFramework="net451" />
   <package id="StructureMap.WebApi2" version="3.0.4.125" targetFramework="net451" />
+  <package id="System.ComponentModel.EventBasedAsync" version="4.3.0" targetFramework="net451" />
   <package id="System.Data.SQLite" version="1.0.102.0" targetFramework="net451" />
   <package id="System.Data.SQLite.Core" version="1.0.102.0" targetFramework="net451" />
   <package id="System.Data.SQLite.EF6" version="1.0.102.0" targetFramework="net451" />
   <package id="System.Data.SQLite.Linq" version="1.0.102.0" targetFramework="net451" />
+  <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net451" />
+  <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net451" />
+  <package id="System.Net.Requests" version="4.0.11" targetFramework="net451" />
+  <package id="System.Spatial" version="5.8.2" targetFramework="net451" />
   <package id="WebActivatorEx" version="2.1.0" targetFramework="net451" />
+  <package id="WindowsAzure.Storage" version="8.1.1" targetFramework="net451" />
 </packages>
