updated docker files

--- a/Feedback/NHS111.Business.Feedback.Api/Dockerfile
+++ b/Feedback/NHS111.Business.Feedback.Api/Dockerfile
@@ -3,8 +3,12 @@ FROM microsoft/aspnet:4.7
 WORKDIR /inetpub/wwwroot
 
 ARG source
-COPY ./obj/Docker/publish/_PublishedWebsites/nhs111-feeback-api .
+COPY ./obj/octopacked .
 COPY ./replace_appsettings.ps1 .
 
+# RENAME THE OCTOPACK FILE 
+RUN dir .\ -Filter *.nupkg | Rename-Item -newname { [io.path]::ChangeExtension($_.name, "zip") }
+# EXPAND THE FILE
+RUN dir .\ -Filter *.zip | Expand-Archive -Path {$_.FullName} -DestinationPath .
 RUN Set-WebBinding 'Default Web Site' -BindingInformation "*:80:" -PropertyName "Port" -Value "87"
 CMD powershell ./replace_appsettings.ps1
