updated appinsights SDK

--- a/Feedback/NHS111.Business.Feedback.Api/Web.config
+++ b/Feedback/NHS111.Business.Feedback.Api/Web.config
@@ -24,6 +24,7 @@
     <globalization culture="en-GB" />
     <customErrors mode="Off" />
     <httpModules>
+      <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
   </system.web>
@@ -38,7 +39,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages.Razor" publicKeyToken="31bf3856ad364e35" />
@@ -68,17 +69,25 @@
         <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.8.1.0" newVersion="5.8.1.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.ApplicationInsights" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.13.1.12554" newVersion="2.13.1.12554" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.webServer>
     <rewrite>
       <rules>
         <rule name="Rewrite AlwaysOn" stopProcessing="true">
-          <match url="^$"/>
+          <match url="^$" />
           <conditions>
-            <add input="{HTTP_USER_AGENT}" pattern="^AlwaysOn$"/>
+            <add input="{HTTP_USER_AGENT}" pattern="^AlwaysOn$" />
           </conditions>
-          <action type="Rewrite" url="/monitor/ping"/>
+          <action type="Rewrite" url="/monitor/ping" />
         </rule>
       </rules>
     </rewrite>
@@ -90,6 +99,8 @@
     </handlers>
     <modules>
       <add name="MyBasicAuthenticationModule" type="NHS111.Business.Feedback.Api.Authentication.BasicAuthenticationModule" />
+      <remove name="TelemetryCorrelationHttpModule" />
+      <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="managedHandler" />
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
@@ -114,13 +125,13 @@
   </system.data>
   <log4net>
     <root>
-      <level value="ALL"/>
-      <appender-ref ref="LogFileAppender"/>
+      <level value="ALL" />
+      <appender-ref ref="LogFileAppender" />
     </root>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="..\..\LogFiles\Log4Net\Log4Net.log"/>
-      <param name="AppendToFile" value="true"/>
-      <rollingStyle value="Size"/>
+      <param name="File" value="..\..\LogFiles\Log4Net\Log4Net.log" />
+      <param name="AppendToFile" value="true" />
+      <rollingStyle value="Size" />
       <datePattern value="yyyyMMdd" />
       <maxSizeRollBackups value="10" />
       <maximumFileSize value="10000KB" />
@@ -129,8 +140,8 @@
         <conversionPattern value="%-5level %date{dd-MM-yyyy HH:mm:ss} %logger [%thread] - %message %exception%newline" />
       </layout>
       <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="ERROR"/>
-        <levelMax value="FATAL"/>
+        <levelMin value="ERROR" />
+        <levelMax value="FATAL" />
       </filter>
     </appender>
   </log4net>
