--- a/Feedback/NHS111.Business.Feedback.Api/packages.config
+++ b/Feedback/NHS111.Business.Feedback.Api/packages.config
@@ -4,16 +4,17 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="kafka-net" version="0.9.0.65" targetFramework="net451" />
   <package id="log4net" version="2.0.5" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights" version="2.13.1" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.13.1" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.Log4NetAppender" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.13.1" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.13.1" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.13.1" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.13.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.7" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net451" />
@@ -28,7 +29,7 @@
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Neo4jClient" version="1.1.0.39" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net451" />
   <package id="NHS111.IoC" version="1.0.0.30" targetFramework="net451" />
   <package id="NHS111.Utils" version="1.0.0.78" targetFramework="net451" />
   <package id="OctoPack" version="3.0.71" targetFramework="net451" developmentDependency="true" />
@@ -37,15 +38,19 @@
   <package id="StructureMap.MVC5" version="3.1.1.134" targetFramework="net451" />
   <package id="structuremap.web" version="4.0.0.315" targetFramework="net451" />
   <package id="StructureMap.WebApi2" version="3.0.4.125" targetFramework="net451" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net451" />
   <package id="System.ComponentModel.EventBasedAsync" version="4.3.0" targetFramework="net451" />
   <package id="System.Data.SQLite" version="1.0.102.0" targetFramework="net451" />
   <package id="System.Data.SQLite.Core" version="1.0.102.0" targetFramework="net451" />
   <package id="System.Data.SQLite.EF6" version="1.0.102.0" targetFramework="net451" />
   <package id="System.Data.SQLite.Linq" version="1.0.102.0" targetFramework="net451" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.6.0" targetFramework="net451" />
   <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net451" />
   <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net451" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net451" />
   <package id="System.Net.Requests" version="4.0.11" targetFramework="net451" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net451" />
   <package id="System.Spatial" version="5.8.2" targetFramework="net451" />
   <package id="WebActivatorEx" version="2.1.0" targetFramework="net451" />
-  <package id="WindowsAzure.Storage" version="8.1.1" targetFramework="net451" />
+  <package id="WindowsAzure.Storage" version="9.3.3" targetFramework="net451" />
 </packages>
