add config switch to enable basic auth

--- a/Feedback/NHS111.Business.Feedback.Api/Web.config
+++ b/Feedback/NHS111.Business.Feedback.Api/Web.config
@@ -29,6 +29,7 @@
     </httpModules>
   </system.web>
   <appSettings file="C:\Configurations\nhs111-shared-resources\shared.debug.config">
+    <add key="BasicAuthFeatureIsEnabled" value="false"/>
     <add key="login_credential_user" value="madeupUser" />
     <add key="login_credential_password" value="madeupPassword" />
     <add key="DeleteFeedbackFeature" value="false" />
